--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: "0 12 * * 0"
+    - cron: "37 0 1 * *"
   workflow_dispatch:
       
 jobs:
