--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
   AppImage:
     runs-on: ubuntu-20.04
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
     - name: Create AppImage
       run: |
            sudo apt-get -y install desktop-file-utils
